added readme file

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="d-flex">
-  <!-- <div class="p-2">
+  <div class="p-2">
     <router-outlet></router-outlet>
-  </div> -->
-  <app-chessboard></app-chessboard>
+  </div>
 </div>
