--- a/frontend/projects/chessmate-app/src/styles/reboot.scss
+++ b/frontend/projects/chessmate-app/src/styles/reboot.scss
@@ -1,12 +1,24 @@
 :root {
   --bs-link-color: var(--primary-color-text);
+  --bs-link-color-rgb: var(--primary-color-text);
   --bs-link-hover-color: var(--text-color);
+  --bs-link-hover-color-rgb: var(--text-color);
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   color: var(--text-color);
 }
 
+a {
+  text-decoration: none;
+}
+
+dl, ol, ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 body {
-  background-color: var(--surface-100);
+  //background: #161512 linear-gradient(to bottom, hsl(37, 12%, 16%), hsl(37, 10%, 8%) 116px) no-repeat;
+  background: var(--surface-100);
 }
