added resize method in chessboard

--- a/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
+++ b/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
@@ -1,5 +1,6 @@
-<ngx-chess-board #board 
+<ngx-chess-board class="chessboard" #board 
     [lightTileColor]="whiteSquareColor"
     [darkTileColor]="blackSquareColor"
-    [pieceIcons]="pieceIcons">
+    [pieceIcons]="pieceIcons"
+    [size]="size">
 </ngx-chess-board>
