--- a/frontend/projects/chessmate-app/src/app/pages/home/home.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
-<app-chessboard></app-chessboard>
-<p-button label="Create Game" (onClick)="createGame()"></p-button>
+<app-lobby></app-lobby>
 
+<div class="mt-3">
+  <app-chessboard></app-chessboard>
+</div>
