implemented create anonymous game flow

--- a/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
@@ -12,9 +12,9 @@
   </ng-template>
   <ng-template pTemplate="body" let-game>
     <tr>
-      <td>{{ game.color }}</td>
-      <td>{{ game.player }}</td>
-      <td>{{ game.rating }}</td>
+      <td>{{ game.hostPlayerColor }}</td>
+      <td>{{ game.hostPlayerUsername }}</td>
+      <td>{{ game.hostPlayerElo }}</td>
       <td>--</td>
       <td>Classic</td>
     </tr>
