--- a/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
@@ -1,6 +1,7 @@
 <h4>Lobby</h4>
 
-<p-table [value]="openGames" [paginator]="true" [rows]="10">
+<p-table [value]="openGames" [paginator]="true" [lazy]="true" [rows]="10" (onLazyLoad)="loadGames($event)"
+  [(first)]="first" [totalRecords]="totalRecords" [loading]="isLoading">
   <ng-template pTemplate="header">
     <tr>
       <th>Color</th>
