--- a/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
@@ -9,15 +9,19 @@
       <th>Rating</th>
       <th>Time</th>
       <th>Mode</th>
+      <th></th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-game>
     <tr>
-      <td>{{ game.hostPlayerColor }}</td>
+      <td>{{ getHostColor(game) }}</td>
       <td>{{ game.hostPlayerUsername }}</td>
       <td>{{ game.hostPlayerElo }}</td>
       <td>--</td>
       <td>Classic</td>
+      <td>
+        <p-button label="Join" (click)="joinGame(game)" [disabled]="isLoading"></p-button>
+      </td>
     </tr>
   </ng-template>
 </p-table>
