--- a/frontend/projects/chessmate-app/src/styles/reboot.scss
+++ b/frontend/projects/chessmate-app/src/styles/reboot.scss
@@ -21,4 +21,5 @@ dl, ol, ul {
 body {
   //background: #161512 linear-gradient(to bottom, hsl(37, 12%, 16%), hsl(37, 10%, 8%) 116px) no-repeat;
   background: var(--surface-100);
+  color: var(--text-color);
 }
