--- a/frontend/projects/chessmate-app/src/app/shared/components/create-game-dialog/create-game-dialog.component.html
+++ b/frontend/projects/chessmate-app/src/app/shared/components/create-game-dialog/create-game-dialog.component.html
@@ -1,43 +1,45 @@
-<p-dialog header="Create game" [(visible)]="visible" [closable]="true" [modal]="true">
+<p-dialog header="Create game" [(visible)]="visible" [closable]="true" [modal]="true"
+  (onHide)="hide()" (onShow)="show()">
 
   @if (isLoading) {
-    <div class="d-flex justify-content-center">
+    <div class="d-flex flex-column align-items-center">
       <span class="text-center">Waiting for a player to join</span>
       <p-progressSpinner></p-progressSpinner>
     </div>
   }
-
-  <form [formGroup]="form" (ngSubmit)="createGame()">
-    <div class="mb-3 d-flex flex-column">
-      <label for="timeControl" class="form-label">Time Control</label>
-      <p-dropdown [options]="timeControlOptions" id="timeControl" formControlName="timeControl" styleClass="w-100" />
-    </div>
-    <div class="mb-3 d-flex flex-column">
-      <label for="gameType" class="form-label">Game Type</label>
-      <p-dropdown [options]="gameTypeOptions" id="gameType" formControlName="gameType" styleClass="w-100" />
-    </div>
-    
-    <div class="color-submits">
-      <button type="button" class="btn color-submits__button" [pTooltip]="'Black color'" [tooltipPosition]="'bottom'"
-        (click)="setBlackHostColor()">
-        <i style="background-image: url('/assets/colors/black-piece.svg');"></i>
-      </button>
-      <button type="button" class="btn color-submits__button random" [pTooltip]="'Random color'"
-        [tooltipPosition]="'bottom'" (click)="setRandomHostColor()">
-        <i style="background-image: url('/assets/colors/random-piece.svg');"></i>
-      </button>
-      <button type="button" class="btn color-submits__button" [pTooltip]="'White color'" [tooltipPosition]="'bottom'"
-        (click)="setWhiteHostColor()">
-        <i style="background-image: url('/assets/colors/white-piece.svg');"></i>
-      </button>
-    </div>
-    
-    <div class="d-flex justify-content-center">
-      <p-button type="submit"
-        class="mt-3"
-        label="Create"
-        [disabled]="isLoading">
-      </p-button>
-    </div>
-  </form>
+  @else {
+    <form [formGroup]="form" (ngSubmit)="createGame()">
+      <div class="mb-3 d-flex flex-column">
+        <label for="timeControl" class="form-label">Time Control</label>
+        <p-dropdown [options]="timeControlOptions" id="timeControl" formControlName="timeControl" styleClass="w-100" />
+      </div>
+      <div class="mb-3 d-flex flex-column">
+        <label for="gameType" class="form-label">Game Type</label>
+        <p-dropdown [options]="gameTypeOptions" id="gameType" formControlName="gameType" styleClass="w-100" />
+      </div>
+      
+      <div class="color-submits">
+        <button type="button" class="btn color-submits__button" [pTooltip]="'Black color'" [tooltipPosition]="'bottom'"
+          [class]="{'selected': form.value.hostColor === 1}" (click)="setBlackHostColor()">
+          <i style="background-image: url('/assets/colors/black-piece.svg');"></i>
+        </button>
+        <button type="button" class="btn color-submits__button random" [pTooltip]="'Random color'"
+          [class]="{'selected': form.value.hostColor === null}" [tooltipPosition]="'bottom'" (click)="setRandomHostColor()">
+          <i style="background-image: url('/assets/colors/random-piece.svg');"></i>
+        </button>
+        <button type="button" class="btn color-submits__button" [pTooltip]="'White color'" [tooltipPosition]="'bottom'"
+          [class]="{'selected': form.value.hostColor === 0}" (click)="setWhiteHostColor()">
+          <i style="background-image: url('/assets/colors/white-piece.svg');"></i>
+        </button>
+      </div>
+      
+      <div class="d-flex justify-content-center">
+        <p-button type="submit"
+          class="mt-3"
+          label="Create"
+          [disabled]="isLoading">
+        </p-button>
+      </div>
+    </form>
+  }
 </p-dialog>
