implemented basic game page

--- a/frontend/projects/chessmate-app/src/app/layout/topbar/topbar.component.html
+++ b/frontend/projects/chessmate-app/src/app/layout/topbar/topbar.component.html
@@ -1,9 +1,9 @@
 <p-menubar [model]="menuItems" [baseZIndex]="1001">
   <ng-template pTemplate="start">
-    <div class="d-flex align-items-center">
+    <a [routerLink]="'/home'" class="d-flex align-items-center">
       <img src="assets/favicon.ico" alt="logo" height="40" class="me-2">
       <h1 class="m-0">ChessMate</h1>
-    </div>
+    </a>
   </ng-template>
 
   <ng-template pTemplate="end">
