--- a/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/home/components/lobby/lobby.component.html
@@ -20,7 +20,9 @@
       <td>--</td>
       <td>Classic</td>
       <td>
-        <p-button label="Join" (click)="joinGame(game)" [disabled]="isLoading"></p-button>
+        @if (game.hostPlayerId !== playerId) {
+          <p-button label="Join" (click)="joinGame(game)" [disabled]="isLoading"></p-button>
+        }
       </td>
     </tr>
   </ng-template>
