--- a/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
+++ b/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
@@ -2,5 +2,6 @@
     [lightTileColor]="whiteSquareColor"
     [darkTileColor]="blackSquareColor"
     [pieceIcons]="pieceIcons"
-    [size]="size">
+    [size]="size"
+    [showLastMove]="true">
 </ngx-chess-board>
