--- a/frontend/projects/chessmate-app/src/app/app.component.html
+++ b/frontend/projects/chessmate-app/src/app/app.component.html
@@ -6,6 +6,10 @@
     
     <div class="container pt-4">
       <router-outlet></router-outlet>
+
+      <div class="mt-4">
+        <span>Your ID: {{playerId}}</span>
+      </div>
     </div>
   </div>
 </div>
