--- a/frontend/projects/chessmate-app/src/app/pages/game/game.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/game/game.component.html
@@ -1,22 +1,41 @@
 <div class="row">
   <div class="col-12 col-md-8">
-    <app-chessboard #chessboardRef></app-chessboard>
+    <app-chessboard #chessboardRef [orientation]="boardOrientation"></app-chessboard>
   </div>
   <div class="col-12 col-md-4">
-    <p-card>
-      <h4>Game Info</h4>
-      <p>White Player: {{game?.whitePlayerUsername}} - <span>{{game?.whitePlayerElo}}</span></p>
-      <p>Black Player: {{game?.blackPlayerUsername}} - <span>{{game?.whitePlayerElo}}</span></p>
-      <p>White Player ID: {{game?.whitePlayerId}}</p>
-      <p>Black Player ID: {{game?.blackPlayerId}}</p>
-      <p>Turn: {{game?.currentTurnPlayer}}</p>
-      <p>Game Status: {{game?.status}}</p>
+    <div class="d-flex flex-column gap-2">
+      <p-card>
+        <h4>Game Info</h4>
+        <p>
+          White Player: {{game?.whitePlayerUsername}} - <span>{{game?.whitePlayerElo}}</span>
+  
+          @if (game?.whitePlayerUsername === 'Anonymous' && isCurrentPlayer(game?.whitePlayerId)) {
+            <span> (You)</span>
+          }
+        </p>
+        <p>
+          Black Player: {{game?.blackPlayerUsername}} - <span>{{game?.whitePlayerElo}}</span>
+  
+          @if (game?.blackPlayerUsername === 'Anonymous' && isCurrentPlayer(game?.blackPlayerId)) {
+            <span> (You)</span>
+          }
+        </p>
+        <p>White Player ID: {{game?.whitePlayerId}}</p>
+        <p>Black Player ID: {{game?.blackPlayerId}}</p>
+        <p>Turn: {{game?.currentTurn}}</p>
+        <p>Game Status: {{game?.status}}</p>
+  
+        <div class="d-flex gap-1">
+          <p-button label="Cancel" (click)="cancelGame()" [disabled]="isLoading"></p-button>
+          <p-button label="Resign" (click)="resignGame()" [disabled]="isLoading"></p-button>
+          <p-button label="Offer Draw" (click)="offerDraw()" [disabled]="isLoading"></p-button>
+        </div>
+      </p-card>
 
-      <div class="d-flex gap-1">
-        <p-button label="Cancel" (click)="cancelGame()" [disabled]="isLoading"></p-button>
-        <p-button label="Resign" (click)="resignGame()" [disabled]="isLoading"></p-button>
-        <p-button label="Offer Draw" (click)="offerDraw()" [disabled]="isLoading"></p-button>
-      </div>
-    </p-card>
+      <p-card>
+        <h4>PGN</h4>
+        <textarea class="form-control" rows="10" readonly>{{pgn}}</textarea>
+      </p-card>
+    </div>
   </div>
 </div>
