--- a/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
+++ b/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
@@ -3,5 +3,6 @@
     [darkTileColor]="blackSquareColor"
     [pieceIcons]="pieceIcons"
     [size]="size"
-    [showLastMove]="true">
+    [showLastMove]="true"
+    (moveChange)="emitMoveChangeEvent($event)">
 </ngx-chess-board>
