added turn functionality

--- a/frontend/projects/chessmate-app/src/app/pages/game/game.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/game/game.component.html
@@ -25,7 +25,7 @@
         </p>
         <p>White Player ID: {{game?.whitePlayerId}}</p>
         <p>Black Player ID: {{game?.blackPlayerId}}</p>
-        <p>Turn: {{game?.currentTurn}}</p>
+        <p>Turn: {{currentTurn}}</p>
         <p>Game Status: {{game?.status}}</p>
   
         <div class="d-flex gap-1">
