--- a/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
+++ b/frontend/projects/chessmate-app/src/app/shared/components/chessboard/chessboard.component.html
@@ -4,5 +4,7 @@
     [pieceIcons]="pieceIcons"
     [size]="size"
     [showLastMove]="true"
+    [lightDisabled]="whiteDisabled"
+    [darkDisabled]="blackDisabled"
     (moveChange)="emitMoveChangeEvent($event)">
 </ngx-chess-board>
