added game result dialog

--- a/frontend/projects/chessmate-app/src/app/pages/game/game.component.html
+++ b/frontend/projects/chessmate-app/src/app/pages/game/game.component.html
@@ -1,3 +1,5 @@
+<app-game-result-dialog [(visible)]="gameResultDialogVisible" [result]="gameResult"></app-game-result-dialog>
+
 <div class="row">
   <div class="col-12 col-md-8">
     <app-chessboard #chessboardRef 
